<resources>
    <string name="app_name">Proyecto Final DAM</string>
    <string name="valLogin">Login</string>
    <string name="valEntrar">Entrar</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_estadoConsultas">Estado de Consultas</string>
    <string name="menu_slideshow">Slideshow</string>
    <string-array name="estado_array">
        <item>Registrado</item>
        <item>En Proceso</item>
        <item>Terminado</item>
        <item>Cancelado</item>
    </string-array>
    <string name="menu_reservarcita">Reservar Cita</string>
    <string name="menu_visualizarcita">Visualizar Cita</string>
    <string name="menu_historialcita">Historial de Citas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="create_account">[ Crear Cuenta ]</string>
    <string name="new_headquarters">Nueva sede</string>
    <string name="registrar_nueva_sede">Registrar nueva sede</string>
    <string name="nombre_de_la_sede">Nombre de la sede</string>
    <string name="direcci_n_de_la_sede">Dirección de la sede</string>
    <string name="guardar">Guardar</string>
    <string name="ingrese_su_dni">Ingrese su DNI</string>
    <string name="recuperar_contrase_a">Recuperar Contraseña</string>
    <string name="cancelar">Cancelar</string>
    <string name="menu_citas_finalizadas">Citas Finalizadas</string>
    <string name="menu_registrar_horarios">Registrar Horarios</string>
    <string name="menu_citas_programadas">Citas Programadas</string>
</resources>