<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_estadoConsultas"
            android:icon="@drawable/informe_medico"
            android:title="@string/menu_estadoConsultas" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_reservarcita"
            android:icon="@drawable/ic_menu_reservarcita"
            android:title="@string/menu_reservarcita" />
        <item
            android:id="@+id/nav_visualizarcita"
            android:icon="@drawable/ic_menu_visualizarcita"
            android:title="@string/menu_visualizarcita" />

        <item
            android:id="@+id/nav_historial_citas"
            android:icon="@drawable/ic_menu_historialcitas"
            android:title="@string/menu_historialcita" />
        <item
            android:id="@+id/nav_nueva_sede"
            android:icon="@drawable/ic_menu_estadoconsultas"
            android:title="@string/new_headquarters" />
    </group>
</menu>