<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_registrar_cita"
            android:icon="@drawable/ic_menu_reservarcita"
            android:title="@string/menu_reservarcita" />
        <item
            android:id="@+id/nav_visualizarcita"
            android:icon="@drawable/ic_menu_visualizarcita"
            android:title="@string/menu_visualizarcita" />

        <item
            android:id="@+id/nav_historial_citas"
            android:icon="@drawable/ic_menu_historialcitas"
            android:title="@string/menu_historialcita" />
        <item
            android:id="@+id/nav_citas_programadas"
            android:icon="@drawable/ic_menu_historialcitas"
            android:title="@string/menu_citas_programadas" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="Cerrar sesión" />
    </group>
</menu>