<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.proyectofinaldam.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_estadoConsultas"
        android:name="com.example.proyectofinaldam.ui.estado_de_consultas.EstadoDeConsultasFragment"
        android:label="@string/menu_estadoConsultas"
        tools:layout="@layout/fragment_estadodeconsultas" />

    <fragment
        android:id="@+id/nav_citas_finalizadas"
        android:name="com.example.proyectofinaldam.ui.citas_finalizadas.CitasFinalizadasFragment"
        android:label="@string/menu_citas_finalizadas"
        tools:layout="@layout/fragment_citas_finalizadas" >
        <action
            android:id="@+id/action_citasFinalizadasFragment_to_notasDoctorFragment"
            app:destination="@id/notasDoctorFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_reservarcita"
        android:name="com.example.proyectofinaldam.ui.reservarcita.ReservarcitaFragment"
        android:label="@string/menu_reservarcita"
        tools:layout="@layout/fragment_reservarcita" />

    <fragment
        android:id="@+id/nav_visualizarcita"
        android:name="com.example.proyectofinaldam.ui.visualizarcita.VisualizarcitaFragment"
        android:label="@string/menu_visualizarcita"
        tools:layout="@layout/fragment_visualizarcita" />

    <fragment
        android:id="@+id/nav_historial_citas"
        android:name="com.example.proyectofinaldam.ui.historialcitas.HistorialCitasFragment"
        android:label="@string/menu_historialcita"
        tools:layout="@layout/fragment_historial_citas">
        <action
            android:id="@+id/action_historialCitasFragment_to_detalleCitaFragment"
            app:destination="@id/detalleCitaFragment" />
    </fragment>

    <fragment
        android:id="@+id/detalleCitaFragment"
        android:name="com.example.proyectofinaldam.ui.detalle_cita.DetalleCitaFragment"
        android:label="Detalle de Cita"
        tools:layout="@layout/fragment_detalle_cita" >
        <action
            android:id="@+id/action_detalleCitaFragment_to_comentariosFragment"
            app:destination="@id/comentariosFragment" />
    </fragment>


    <fragment
        android:id="@+id/nav_nueva_sede"
        android:name="com.example.proyectofinaldam.ui.nuevasede.RegistrarSedeFragment"
        android:label="@string/menu_estadoConsultas"
        tools:layout="@layout/fragment_registrar_sede" />

    <fragment
        android:id="@+id/comentariosFragment"
        android:name="com.example.proyectofinaldam.ui.comentarios.ComentariosFragment"
        android:label="Añadir Comentarios"
        tools:layout="@layout/fragment_comentarios" />

    <fragment
        android:id="@+id/notasDoctorFragment"
        android:name="com.example.proyectofinaldam.ui.notas_doctor.NotasDoctorFragment"
        android:label="Notas del doctor"
        tools:layout="@layout/fragment_notas_doctor" />

    <fragment
        android:id="@+id/nav_registrarHorarios"
        android:name="com.example.proyectofinaldam.ui.registrar_horarios.RegistrarHorariosFragment"
        android:label="Registrar horarios"
        tools:layout="@layout/fragment_registrar_horarios" />

</navigation>